--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "land-lord",
+  "license": "MIT",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "antd": "^3.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
