--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "antd": "^3.0.3",
+    "firebase": "^4.11.0",
+    "immutable": "^3.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -12,7 +14,10 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
+    "shortid": "^2.2.8"
   },
   "scripts": {
     "start": "react-scripts start",
