--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/lodash": "^4.14.119"
+  }
 }
