--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "private": true,
   "dependencies": {
     "@types/jest": "^23.3.9",
-    "@types/node": "^10.12.10",
-    "@types/react": "^16.7.7",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.10",
     "antd": "^3.0.3",
     "firebase": "^5.5.9",
+    "firebaseui": "^3.5.1",
     "immutable": "^3.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
