--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "immutable": "^3.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-firebaseui": "^3.1.2",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
