--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/lodash": "^4.14.119"
+    "@types/lodash": "^4.14.119",
+    "@types/shortid": "^0.0.29"
   }
 }
