--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# functions
+/functions/node_modules
+/functions/**/*.js
+/functions/**/*.js.map
