--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "tslint": "~5.8.0",
-    "typescript": "~2.8.3"
+    "typescript": "3.3.1"
   },
   "private": true
 }
