--- a/functions/package.json
+++ b/functions/package.json
@@ -19,5 +19,8 @@
     "tslint": "~5.8.0",
     "typescript": "3.3.1"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "8"
+  }
 }
