--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# functions
+/functions/node_modules
+/functions/**/*.js
+/functions/**/*.js.map
+
+# sendgrid
+sendgrid.env
