--- a/package.json
+++ b/package.json
@@ -4,10 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^23.3.9",
-    "@types/node": "^10.12.18",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.10",
     "antd": "^3.0.3",
     "firebase": "^5.5.9",
     "firebaseui": "^3.5.1",
@@ -40,7 +36,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react-redux": "^7.1.5",
+    "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.119",
+    "@types/node": "^10.12.18",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.10",
+    "@types/react-router-dom": "^5.1.0",
     "@types/shortid": "^0.0.29"
   }
 }
